fix: width container overflow

--- a/src/content/tutorial/3-layout-dan-transisi/2-css-grid-layout/2-properti-dasar-grid/_solution/assets/css/style.css
+++ b/src/content/tutorial/3-layout-dan-transisi/2-css-grid-layout/2-properti-dasar-grid/_solution/assets/css/style.css
@@ -25,7 +25,6 @@
 
 .grid-container {
   display: grid;
-  width: 100%;
   height: 250px;
   grid-template-areas:
     "header header header"
